public/styles.css
*,
*::before,
*::after {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

:root {
  --search-bar-bg: #ececec;
  --primary-bg: #ffffff;
  --secondary-bg: #072540;
  --submit-btn-bg: #1aa372;
  --cancel-btn-bg: #d4594e;
  --grayed-out-btn-bg: rgba(0, 0, 0, 10%);

  --primary-fg: #000000;
  --white-fg: #ffffff;
  --add-btn-fg: #2ef2aa;
  --secondary-fg: #1cad8e;
  --categories-item-fg: #0f2a49;
  --grayed-out-selection-fg: rgba(0, 0, 0, 30%);

  --light-gray-border: rgba(0, 0, 0, 5%);
  --gray-border: rgba(0, 0, 0, 10%);
  --dark-gray-border: rgba(0, 0, 0, 30%);
  --loader: rgba(0, 0, 0, 30%);
  /* @link https://utopia.fyi/type/calculator?c=320,18,1.2,1240,20,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
  --step--2: clamp(0.7813rem, 0.7747rem + 0.0326vw, 0.8rem);
  --step--1: clamp(0.9375rem, 0.9158rem + 0.1087vw, 1rem);
  --step-0: clamp(1.125rem, 1.0815rem + 0.2174vw, 1.25rem);
  --step-1: clamp(1.35rem, 1.2761rem + 0.3696vw, 1.5625rem);
  --step-2: clamp(1.62rem, 1.5041rem + 0.5793vw, 1.9531rem);
  --step-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
  --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
  --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
}

.lucide {
  stroke-width: 3px;
  pointer-events: none;
}

ul {
  list-style: none;
}

button {
  cursor: pointer;
}

body {
  min-height: 100vh;
  margin: 0 auto;
}

.content {
  max-width: 1240px;
  margin: 0 auto;
  padding: 0 16px;
}

.modal {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: 0;
  width: 100%;
  max-width: 400px;
  padding: 16px;
  background-color: transparent;
}

.modal-content {
  --empty-space: 20px;

  background-color: var(--primary-bg);
}

.modal-form {
  --row-space: 16px;

  display: flex;
  flex-direction: column;
  gap: var(--row-space);
  font-size: var(--step--1);
  padding: var(--empty-space);
  padding-bottom: var(--row-space);
}

.form-header {
  border-bottom: 2px solid var(--light-gray-border);
  font-size: var(--step-0);
  padding: 20px var(--empty-space);
  background-color: var(--secondary-bg);
  color: var(--white-fg);
}

.field {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.field label {
  font-size: var(--step-0);
}

.field input,
.field select {
  height: 32px;
  padding-left: 8px;
  font-size: inherit;
}

.modal-btns {
  padding: var(--empty-space);
  padding-top: 0;
}

.modal-btns * {
  padding: 8px 24px;
  border-radius: 3px;
  border: 0;
  color: var(--white-fg);
  font-size: inherit;
}

.submit-btn {
  background-color: var(--submit-btn-bg);
}

.cancel-btn {
  margin-left: 4px;
  background-color: var(--cancel-btn-bg);
}

.loader-wrapper {
  background-color: var(--primary-bg);
  width: 110px;
  height: 110px;
  margin: 0 auto;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 3px;
}

/* HTML: <div class="loader"></div> */
.loader {
  width: var(--step--2);
  aspect-ratio: 1;
  border-radius: 50%;
  animation: l5 1s infinite linear alternate;
}

@keyframes l5 {
  0% {
    box-shadow:
      20px 0 #000,
      -20px 0 #0002;
    background: #000;
  }
  33% {
    box-shadow:
      20px 0 #000,
      -20px 0 #0002;
    background: #0002;
  }
  66% {
    box-shadow:
      20px 0 #0002,
      -20px 0 #000;
    background: #0002;
  }
  100% {
    box-shadow:
      20px 0 #0002,
      -20px 0 #000;
    background: #000;
  }
}

header {
  background-color: var(--secondary-bg);
  margin-bottom: 24px;
}

header > div {
  max-width: 1240px;
  padding: 16px;
  display: flex;
  flex-direction: column;
  row-gap: 8px;
  margin: 0 auto;
}

h1 {
  color: var(--white-fg);
  font-size: var(--step-3);
}

.header-controls {
  width: 100%;
  display: flex;
}

.search-bar {
  width: 100%;
  background-color: var(--search-bar-bg);
  padding: 8px 12px;
  border-radius: 5px;
  font-size: var(--step--1);
}

.search-bar:focus-within {
  outline: 3px solid green;
}

.search-icon {
  width: 1.1em;
  height: 1.1em;
  vertical-align: middle;
}

.search-bar input {
  background-color: inherit;
  outline: none;
  border: none;
  font-size: 1em;
  vertical-align: middle;
  margin-left: 4px;
}

.add-menu {
  position: relative;
}

.add-btn {
  border: none;
  background-color: transparent;
  margin-left: 8px;
  color: var(--add-btn-fg);
}

.add-btn [data-lucide] {
  width: var(--step-1);
  height: var(--step-1);
}

.add-dropdown {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: var(--search-bar-bg);
  border: 1px solid var(--secondary-bg);
  border-radius: 5px;
}

.add-dropdown button {
  width: 100%;
  font-size: var(--step--1);
  background-color: transparent;
  border: none;
  padding: 12px 20px;
  text-wrap: nowrap;
}

.add-dropdown button:hover {
  background-color: var(--secondary-bg);
  color: var(--white-fg);
}

.btns-wrapper {
  display: flex;
  align-items: center;
  margin-bottom: 8px;
}

.btns-wrapper > * {
  border: none;
  background-color: var(--primary-bg);
}

.filter-btn {
  flex-grow: 1;
  text-align: left;
  font-size: var(--step--1);
  color: var(--secondary-fg);
}

.btns-wrapper [data-lucide] {
  width: var(--step--1);
  height: var(--step--1);
  margin-left: 8px;
  color: var(--secondary-fg);
}

.filters {
  display: flex;
  flex-direction: column;
  gap: 8px;
  padding-left: 12px;
}

.hidden {
  display: none;
}

.categories {
  display: flex;
  flex-wrap: wrap;
  gap: 4px;
  border: none;
}

.category-item {
  font-size: var(--step--1);
  padding: 5px 15px;
  border-radius: 999px;
  color: var(--primary-fg);
  background-color: transparent;
  border: none;
}

.category-item:has(input:checked) {
  background-color: var(--secondary-fg);
  color: var(--white-fg);
}

.sort {
  display: flex;
  align-items: center;
  gap: 8px;
  margin-bottom: 16px;
}

#sort-select {
  border: none;
  text-decoration-line: underline;
  text-underline-offset: 3px;
  text-decoration-color: var(--secondary-fg);
}

.sort-order {
  border: none;
  display: inline-flex;
  gap: 8px;
}

.sort-order [data-lucide] {
  width: 1.1em;
  height: 1.1em;
  color: var(--grayed-out-selection-fg);
  display: block;
}

.sort-order [data-lucide]:has(+ input:checked) {
  color: var(--secondary-fg);
}

.filter-form-controls button {
  font-size: var(--step--2);
  width: 90px;
  height: 30px;
  border: none;
  border-radius: 5px;
}

.filter-form-controls button[type="submit"]:not(:disabled) {
  background-color: var(--submit-btn-bg);
  color: var(--white-fg);
}

.reset-filter-btn {
  background-color: var(--cancel-btn-bg);
  color: var(--white-fg);
}

.products-wrapper {
  position: relative;
  overflow-x: auto;
  margin-top: 24px;
}

/* Modern Standard Rules (Firefox / Core CSS) */
.products-wrapper {
  scrollbar-color: transparent transparent; /* Thumb, Track */
}

/* Legacy WebKit Rules (Chrome, Safari, Edge, Opera) */
.products-wrapper::-webkit-scrollbar {
  width: 8px; /* Sets width for vertical scrollbar */
  height: 8px; /* Sets height for horizontal scrollbar */
  background: transparent; /* Makes entire scrollbar structure transparent */
}

.products-wrapper::-webkit-scrollbar-track {
  background: transparent; /* Makes the track completely see-through */
}

.products-wrapper::-webkit-scrollbar-thumb {
  background: transparent; /* Makes the moving thumb completely see-through */
}

.products {
  width: 1240px;
  table-layout: fixed;
  border-collapse: separate;
  border-top: 2px solid var(--dark-gray-border);
  border-spacing: 0px;
  font-size: var(--step--1);
}

th,
td {
  box-shadow: inset 0px -2px 0 0 var(--gray-border);
  padding: 8px;
}

tbody > tr:hover td,
tbody > tr:hover th {
  background-color: orange;
}

.num-cell {
  text-align: right;
  width: 100px;
}

.text-cell {
  text-align: left;
}

.action-col {
  width: 100px;
}

.action-cell {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

.action-cell button {
  background-color: transparent;
  border: none;
}

.action-cell svg {
  width: var(--step-0);
  height: var(--step-0);
}

.sticky-col {
  width: 45vw;
  max-width: 400px;
  position: sticky;
  left: 0;
  background-color: var(--primary-bg);
  box-shadow:
    inset -4px 0 0 0 var(--dark-gray-border),
    inset 0px -2px 0 0 var(--gray-border);
}

tbody .sticky-col {
  font-weight: normal;
}

@media (min-width: 414px) {
  header > div {
    flex-direction: row;
    justify-content: space-between;
    gap: 8px;
  }

  h1 {
    width: 100%;
  }

  .header-controls {
    justify-content: space-between;
    align-items: center;
  }

  .search-bar {
    max-width: 300px;
  }

  .add-btn {
    margin: 0;
  }

  .modal-content {
    --empty-space: 32px;
  }

  .form-header {
    padding-top: 24px;
    padding-bottom: 24px;
  }
}

